applications/hedgedoc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hedgedoc
  name: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: hedgedoc
            - name: MYSQL_PASSWORD
              value: genericDBpasswordHedgedoc
            - name: MYSQL_ROOT_PASSWORD
              value: rootusersecretpassword
            - name: MYSQL_USER
              value: hedgedoc
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/London
          image: lscr.io/linuxserver/mariadb:latest
          name: mariadb
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: server
              subPath: mariadb
        - env:
            - name: CMD_DOMAIN
              value: hedgedoc.joshaconnor.duckdns.org
            - name: CMD_PROTOCOL_USESSL
              value: "true"
            - name: CMD_URL_ADDPORT
              value: "false"
            - name: CMD_ALLOW_EMAIL_REGISTER
              value: "true"
            - name: CMD_ALLOW_ANONYMOUS_EDITS
              value: "true"
            - name: CMD_ALLOW_FREEURL
              value: "true"
            - name: DB_HOST
              value: localhost
            - name: DB_NAME
              value: hedgedoc
            - name: DB_PASS
              value: genericDBpasswordHedgedoc
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: hedgedoc
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/London
          image: lscr.io/linuxserver/hedgedoc:latest
          name: hedgedoc
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: server
              subPath: hedgedoc
      restartPolicy: Always
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
