applications/hedgedoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hedgedoc
  name: hedgedoc
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    app: hedgedoc
