applications/hedgedoc/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hedgedoc
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("hedgedoc.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: hedgedoc
          port: 3000
